@startuml "DC"
title Diagramme de classes – Plateforme de vente en ligne

package Utilisateurs {

    enum Role {
        Admin
        Client
    }

    class User {
        - idUser : int
        - nom : String
        - prenom : String
        - login : String
        - mdp : String
        - role : Role
    }
    
    User ..> Role : <<uses>>

    class Client {
        - adresse : String
        - moyenPaiement : String
    }

    class Admin {  }

    Client --|> User
    Admin --|> User
}

package Produits {

    class Produit {
        - idProduit : int
        - nom : String
        - prix : double
        - description : String
        - niveauPrestige 'niveau sur 5
        - notationProduit
        - taille
        - quantiteRestante
    }

    class Avis {
        - titre
        - contenue
        - date
    }

    User "0..*" --> "1" Avis : à laisse
    Produit "0..*" -- "0..*" Avis : avis

    class Catalogue {
        - idCatalogue : int
        - nom : String
    }

    Catalogue "1" o-- "0..*" Produit : contient
}

package Commandes {

    class Panier {
        - idPanier : int
    }

    class LignePanier {
        - quantite : int
    }

    class Commande {
        - idCommande : int
        - date : Date
        - statut : String
    }

    class LigneCommande {
        - quantite : int
        - prixUnitaire : double
    }

    ' Relations internes
    Panier "1" *-- "0..*" LignePanier : contient
    LignePanier "1" --> "1" Produit : concerne

    Commande "1" *-- "1..*" LigneCommande : contient
    LigneCommande "1" --> "1" Produit : concerne
}

Client "1" --> "1" Panier : possède
Client "0..*" --> "1" Commande : effectue

@enduml
